--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,1 +1,6 @@
-<p>parent works!</p>
+<input type="number" [(ngModel)]="a" placeholder="Enter a value">
+<input type="number" [(ngModel)]="b" placeholder="Enter b value">
+
+<app-child [a]="a" [b]="b" (result)="updateResult($event)"></app-child>
+
+<p>Result: {{ result }}</p>
