--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
     <div class="navbar-left">
-        <!-- Ide jönnek a gombok a navigációhoz -->
+        <button (click)="navigateTo('parent')">Parent</button>
+        <button (click)="navigateTo('products')">Products</button>
     </div>
     <div class="navbar-right">
     </div>
